# spec_tools

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  CPD-591792.obs  Doxyfile  LICENSE  README.md  csv.h  csv.tpp  der_snr.cpp  findncopy.cpp  genrandspec.cpp  index.html  marker.cpp  marker.h  marker.tpp  msg.cpp  msg.h  params.json  run.sh  shift.cpp  spec_tools.kdev4  star_list.txt  threshold.cpp  trim.cpp
.github/workflows/: ccpp.yml
.kdev4/: spec_tools.kdev4
TODO/elemlist-ncurses/: CMakeLists.txt  main.cpp
data/: line.list  sky_21.obs  sky_22.obs  star_list.txt
data/1/: 11.obs.obs  12.obs.obs  13.obs.obs  14.obs.obs  15.obs.obs
data/2/: 21.obs.obs  22.obs.obs  23.obs.obs  24.obs.obs  25.obs.obs  26.obs.obs  27.obs.obs  28.obs.obs
data/3/: 31.obs.obs  32.obs.obs  33.obs.obs  34.obs.obs  35.obs.obs  sky_31.obs
data/GIRAFFE_fits/: ADP.2019-01-30T19:52:54.739.fits  ADP.2019-01-30T19:52:54.740.fits  ADP.2019-01-30T19:52:54.741.fits  ADP.2019-01-30T19:52:54.742.fits  ADP.2019-01-30T20:53:18.821.fits  ADP.2019-01-30T20:53:18.822.fits  ADP.2019-01-30T20:53:18.823.fits  ADP.2019-01-30T20:53:18.824.fits
doc/: Doxyfile
include/: CMakeLists.txt  csv.h  csv.tpp  der_snr.h  findncopy.h  log.cpp  log.h  marker.h  marker.tpp  msg.cpp  msg.h  shift.h  spectra.h  spectra.tpp  waverage.hpp  waverage.tpp
script/: mark.sh  plot2pdf.sh  run_synspec_starXXX.sh
src/: CMakeLists.txt  der_snr.cpp  elemlist.cpp  findncopy.cpp  genrandspec.cpp  marker.cpp  shift.cpp  threshold.cpp  trim.cpp  waverage.cpp
test/: CMakeLists.txt  test_csv.cpp  test_marker.cpp  test_msg.cpp
